[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypscan"
version = "2025.1.0"
authors = [
  { name="Dennis Noll", email="github@nollde.de" },
]
description = "Parametric file browser written in pure python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tqdm",
]
license = {text = "MIT License"}
keywords = ["filebrowser", "python", "parametric"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
jupyter = [
  "ipywidgets",
  "wand",
]
tui = [
  "textual",
]
all = [
  "pypscan[jupyter,tui]",
]

[project.scripts]
pypscan = "pypscan.cli:main"

[project.urls]
Homepage = "https://github.com/nollde/pypscan"
Issues = "https://github.com/nollde/pypscan/issues"
